[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "mullvad_cli_wrapper"
version = "0.0.1"
description = "Mullvad VPN CLI wrapper"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    'invoke',
]
